--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -186,7 +186,7 @@ hr {
 }
 
 .navbar-brand {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .navbar.tiny .navbar-brand {
     margin-top: 0;
@@ -197,6 +197,11 @@ hr {
 }
 .navbar-default .navbar-brand:hover {
     color: #22313f;
+}
+
+.navbar-default .navbar-brand small {
+    color: #444;
+    font-size: 11px;
 }
 
 .navbar-brand img {
@@ -324,7 +329,7 @@ hr {
 }
 
 .bg-intro .row {
-    padding-top: 242px;
+    padding-top: 100px;
     padding-bottom: 150px;
 }
 
@@ -351,6 +356,18 @@ hr {
     animation-name: bounceInUp;
     animation-delay: 1.5s;
     -webkit-animation-delay: 1.5s;
+}
+
+.bg-intro h1 a {
+    color: #fff;
+}
+
+.bg-intro h1 a:hover {
+    color: #1BBC9B;
+}
+
+.bg-intro .logos {
+    margin-top: 50px;
 }
 
 /* ANIMATION */
