--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -22,6 +22,8 @@ Description: Style-Layout
 body {
     padding-top: 0;
     font-family: 'Montserrat', sans-serif;
+    background-color: #17181c;
+    color: #f2f2f2;
 }
 
 .green {
@@ -29,7 +31,7 @@ body {
 }
 
 a {
-    color:#444;
+    color:#17a285;
 }
 
 a:hover {
@@ -167,7 +169,7 @@ hr {
 /* NAVBAR
    ================================================== */
 .navbar-default {
-    background-color: rgba(255,255,255,.96);
+    background-color: #17181c;
     border: 0;
     /*box-shadow*/
     -webkit-box-shadow: 0 4px 0 0 rgba(0,0,0,0.08);
@@ -200,7 +202,7 @@ hr {
 }
 
 .navbar-default .navbar-brand small {
-    color: #444;
+    color: #f2f2f2;
     font-size: 11px;
 }
 
@@ -224,7 +226,7 @@ hr {
     padding-bottom: 36px;
     font-size: 15px;
     text-transform: uppercase;
-    color: #22313F;
+    color: #EDEDED;
     /*transition*/
     -webkit-transition: padding .22s ease-out;
     -moz-transition: padding .22s ease-out;
@@ -494,35 +496,35 @@ hr {
 /* SKILLS
    ================================================== */
 .bg-skills {
-    background-color: #F2F2F2;
+    background-color: #34495E;
     padding-top: 130px;
     padding-bottom: 130px;
 }
 
 .bg-skills h2 {
     margin-top: 0;
-    color: #777;
+    color: #f2f2f2;
 }
 
 .bg-skills p {
     padding-right: 40px;
-    color: #777;
+    color: #f2f2f2;
     font-size: 18px;
     line-height: 32px;
     margin-top: 14px;
 }
 
 .bg-skills h4 {
-    color: #777;
+    color: #f4f4f4;
 }
 
 .progress {
-    background-color: #e7e7e7;
+    background-color: #1B2B34;
     border-radius: 4px;
 }
 
 .progress-bar {
-    background-color: #34495E;
+    background-color: #1BBC9B;
 }
 
 @media (max-width:767px) {
