--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,12 @@
+$web-font-path: "https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" !default;
+@if $web-font-path {
+  @import url($web-font-path);
+}
+
+// stylelint-disable value-keyword-case
+$font-family-base: "Titillium Web", -apple-system, system-ui, BlinkMacSystemFont,
+  "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+
 // Import all of Bootstrap's CSS
 @import "bootstrap/scss/bootstrap";
 
